# rust-simd-r-drive

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  test.db
.cargo/: config.toml.example  deny.toml  deny.yml
.github/workflows/: python-build-debug.yml  python-build.yml  python-build2.yml  python-direct-release.yml.TODO  python-net-release.yml  python-ws-integration-test.yml  rust-lint.yml  rust-release.yml  rust-tests-and-release.yml  rust-tests.yml
benches/: contention_benchmark.rs  storage_benchmark.rs
bindings/python/: .gitignore  Cargo.toml  README.md  extract_readme_tests.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
bindings/python-net-client/: Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
bindings/python-net-client/src/: entry_stream.rs  lib.rs  namespace_hasher.rs  net_client.rs
bindings/python-net-client/tests/: test_engine.py
bindings/python/simd_r_drive/: __init__.py  simd_r_drive.pyi
bindings/python/simd_r_drive_py/: requirements.txt
bindings/python/simd_r_drive_py/python/simd_r_drive_py/: __init__.py
bindings/python/simd_r_drive_py/src/: lib.rs
bindings/python/src/: data_store.rs  entry_handle.rs  entry_stream.rs  lib.rs  namespace_hasher.rs
bindings/python/tests/: test_engine.py  test_perf.py
experiments/bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
experiments/bindings/python-net-client/: Cargo.toml  README.md  extract_readme_tests.py
experiments/bindings/python-net-client/simd_r_drive_net_client/: __init__.py
experiments/bindings/python-net-client/src/: net_client.rs
experiments/bindings/python-net-client/tests.TODO/: test_perf.py
experiments/bindings/python-ws-client/: Cargo.toml  README.md  extract_readme_tests.py  integration_test.sh  pyproject.toml
experiments/bindings/python-ws-client/simd_r_drive_ws_client/: __init__.py  simd_r_drive_ws_client.pyi
experiments/bindings/python-ws-client/src/: base_ws_client_py.rs  lib.rs  ws_client_py.rs
experiments/bindings/python-ws-client/tests.TODO/: test_namespace_hasher.py--TODO.IMPLEMENT_FOR_NET_BASED
experiments/bindings/python-ws-client/tests/integraton/: test_client.py  test_multithreaded_read_write.py  test_multithreaded_stage_write.py  test_namespace_hasher.py
experiments/bindings/python/simd_r_drive/: simd_r_drive.pyi
experiments/bindings/python/src/: data_store.rs  entry_stream.rs
experiments/bindings/python_(old_client)/: Cargo.toml  README.md  pyproject.toml
experiments/bindings/python_(old_client)/src/: data_store.rs  entry_handle.rs  lib.rs
experiments/bindings/python_(old_client)/tests/: test_engine.py  test_namespace_hasher.py
experiments/simd-r-drive-muxio-client/: Cargo.toml
experiments/simd-r-drive-muxio-client/src/: main.rs  net_client.rs
experiments/simd-r-drive-muxio-server/: Cargo.toml
experiments/simd-r-drive-muxio-server/src/: cli.rs  main.rs
experiments/simd-r-drive-muxio-server/src/cli/: cli_parser.rs
experiments/simd-r-drive-muxio-service-definition/: Cargo.toml  README.md
experiments/simd-r-drive-muxio-service-definition/src/: lib.rs  prebuffered.rs  utils.rs
experiments/simd-r-drive-muxio-service-definition/src/prebuffered/: api_version.rs.TODO  batch_read.rs  batch_write.rs  buf_write.rs  buf_write_flush.rs  count.rs  delete.rs  exists.rs  file_size.rs  is_empty.rs  len.rs  read.rs  stage_write.rs  stage_write_flush.rs  write.rs
experiments/simd-r-drive-muxio-service-definition/src/utils/: batch_codec.rs
experiments/simd-r-drive-ws-client/: Cargo.toml  README.md
experiments/simd-r-drive-ws-client/src/: TODO.md  lib.rs  main.rs  ws_client.rs
experiments/simd-r-drive-ws-server/: Cargo.toml  README.md
experiments/simd-r-drive-ws-server/src/: main.rs
experiments/simd-r-drive-ws-server/src/cli/: cli_parser.rs  help_template.rs
extensions/: Cargo.toml  README.md
extensions/src/: lib.rs  storage_cache_ext.rs  storage_file_import_ext.rs  storage_option_ext.rs
extensions/src/utils/: option_serializer.rs
extensions/tests/: storage_cache_tests.rs  storage_file_import_tests.rs  storage_option_tests.rs
shellcode/: Cargo.toml
shellcode/src/: main.rs
simd-r-drive-entry-handle/: Cargo.toml  LICENSE  README.md
simd-r-drive-entry-handle/src/: assert_aligned.rs  constants.rs  debug_assert_aligned.rs  entry_handle.rs  entry_metadata.rs  lib.rs
simd-r-drive-extensions/: Cargo.toml  README.md
simd-r-drive-extensions/src/: constants.rs  key_prefixes.rs  lib.rs  main.rs  namespace_hasher.rs  storage_cache_ext.rs  storage_file_import_ext.rs  storage_option_ext.rs  utils.rs
simd-r-drive-extensions/src/utils/: option_serializer.rs  prefix_key.rs
simd-r-drive-extensions/tests/: cache_option_tests.rs  ext_tests.rs  storage_cache_tests.rs  storage_file_import_tests.rs  storage_option_tests.rs
src/: cli.rs  compute_checksum.rs  compute_hash.rs  digest.rs  format_bytes.rs  lib.rs  main.rs  simd_copy.rs  storage_engine.rs  utils.rs
src/cli/: cli_parser.rs  commands.rs  execute_command.rs  help_template.rs  send_output.rs
src/digest/: compute_checksum.rs
src/storage_engine/: append_storage.rs  constants.rs  data_store.rs  digest.rs  entry_handle.rs  entry_iterator.rs  entry_metadata.rs  entry_stream.rs  index_layer.rs  key_indexer.rs  simd_copy.rs  stage_writer_buffer.rs  static_hash_index.rs  traits.rs  write_buffer.rs
src/storage_engine/digest/: compute_hash.rs  xxh3_build_hasher.rs
src/storage_engine/traits/: buf_writer.rs  reader.rs  stage_writer.rs  writer.rs
src/utils/: align_or_copy.rs  append_extension.rs  format_bytes.rs  namespace_hasher.rs  parse_buffer_size.rs  verify_file_existence.rs
tests/: README.md  align_or_copy_tests.rs  alignment_tests.rs  basic_operations_tests.rs  batch_ops_tests.rs  buffered_write_tests.rs  cli_tests.rs  compaction_tests.rs  concurrency_tests.rs  hash_stability_tests.rs  integrity_tests.rs  mmap_and_zero_copy_tests.rs  namespace_hasher_tests.rs  parallel_iterator_tests.rs  persistence_tests.rs  rw_tests.rs  staged_write_tests.rs  storage_operation_tests.rs  streaming_tests.rs
