[workspace.package]
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.15.5-alpha"
edition = "2024"
repository = "https://github.com/jzombie/rust-simd-r-drive"
license = "Apache-2.0"
categories = ["database-implementations", "data-structures", "filesystem"]
keywords = ["storage-engine", "binary-storage", "append-only", "simd", "mmap"]
publish = true

[package]
name = "simd-r-drive"
description = "SIMD-optimized append-only schema-less storage engine. Key-based binary storage in a single-file storage container."
authors.workspace = true
edition.workspace = true
version.workspace = true 
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crc32fast = { workspace = true }
dashmap = "6.1.0"
indoc.workspace = true
memmap2.workspace = true
rayon = { version = "1.10.0", optional = true }
simd-r-drive-entry-handle = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }

[dev-dependencies]
bincode = { workspace = true }
bytemuck = "1.23.2"
criterion = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
thousands = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }

[features]
default = []
expose-internal-api = []
parallel = ["rayon"]

# Proxy: when users enable simd-r-drive/arrow, it enables the dep's arrow.
arrow = ["simd-r-drive-entry-handle/arrow"]

[[bench]]
name = "storage_benchmark"
harness = false

[[bench]]
name = "contention_benchmark"
harness = false

[workspace]
members = [
    ".",
    "simd-r-drive-entry-handle",
    "extensions",
    "experiments/simd-r-drive-ws-server",
    "experiments/simd-r-drive-ws-client",
    "experiments/simd-r-drive-muxio-service-definition"
]
exclude = [
    "experiments/bindings/python",
    "experiments/bindings/python-ws-client"
]
resolver = "2"

[workspace.dependencies]
# Intra-workspace crates
simd-r-drive = { path = ".", version = "0.15.5-alpha" }
simd-r-drive-entry-handle = { path = "./simd-r-drive-entry-handle", version = "0.15.5-alpha" }
simd-r-drive-ws-client = { path = "./experiments/simd-r-drive-ws-client", version = "0.15.5-alpha" }
simd-r-drive-muxio-service-definition = { path = "./experiments/simd-r-drive-muxio-service-definition", version = "0.15.5-alpha" }
muxio-tokio-rpc-client = "0.9.0-alpha"
muxio-tokio-rpc-server = "0.9.0-alpha"
muxio-rpc-service = "0.9.0-alpha"
muxio-rpc-service-caller = "0.9.0-alpha"

# Third-party crates (note, not all dependencies are used in the base drive)
arrow = { version = "57.0.0", default-features = false }
async-trait = "0.1.88"
bincode = "1.3.3" # TODO: Replace with `bitcode`
bitcode = "0.6.6"
clap = "4.5.40"
crc32fast = "1.4.2"
criterion = "0.6.0"
doc-comment = "0.3.3"
futures = "0.3.31"
indoc = "2.0.6"
memmap2 = "0.9.5"
rand = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"
serial_test = "3.2.0"
tempfile = "3.19.0"
thousands = "0.2.0"
tokio = "1.45.1" # Tokio is not used in base `SIMD R Drive`, only extensions
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
walkdir = "2"
