
[package]
name = "simd-r-drive"
description = "SIMD-optimized append-only schema-less storage engine. Key-based binary storage in a single-file storage container."
authors.workspace = true
edition.workspace = true
version.workspace = true 
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[workspace]
members = [
    ".",
    "experiments/simd-r-drive-muxio-service-definition",
    "experiments/simd-r-drive-ws-client",
    "experiments/simd-r-drive-ws-server",
    "extensions",
    "simd-r-drive-entry-handle",
]
exclude = [
    "experiments/bindings/python",
    "experiments/bindings/python-ws-client",
]
resolver = "2"
[workspace.package]
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.16.0-alpha"
edition = "2024"
repository = "https://github.com/jzombie/rust-simd-r-drive"
license = "Apache-2.0"
categories = ["database-implementations", "data-structures", "filesystem"]
keywords = ["storage-engine", "binary-storage", "append-only", "simd", "mmap"]
publish = true

[workspace.dependencies]
arrow = { version = "57.3.0", default-features = false }
async-trait = "0.1.89"
bitcode = "0.6.9"
bytemuck = "1.25.0"
clap = "4.6.0"
crc32fast = "1.5.0"
criterion = "0.6.0"
dashmap = "6.1.0"
doc-comment = "0.3.4"
futures = "0.3.32"
indoc = "2.0.7"
memmap2 = "0.9.10"
muxio-rpc-service = "0.10.1-alpha"
muxio-rpc-service-caller = "0.10.1-alpha"
muxio-tokio-rpc-client = "0.10.1-alpha"
muxio-tokio-rpc-server = "0.10.1-alpha"
rand = "0.10.0"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
serial_test = "3.4.0"
simd-r-drive = { path = ".", version = "0.16.0-alpha" }
simd-r-drive-entry-handle = { path = "./simd-r-drive-entry-handle", version = "0.16.0-alpha" }
simd-r-drive-muxio-service-definition = { path = "./experiments/simd-r-drive-muxio-service-definition", version = "0.16.0-alpha" }
simd-r-drive-ws-client = { path = "./experiments/simd-r-drive-ws-client", version = "0.16.0-alpha" }
tempfile = "3.27.0"
thousands = "0.2.0"
tokio = "1.50.0" # Tokio is not used in base `SIMD R Drive`, only extensions
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2"
xxhash-rust = "0.8.15"

[features]
default = []
expose-internal-api = []
parallel = ["rayon"]

# Proxy: when users enable simd-r-drive/arrow, it enables the dep's arrow.
arrow = ["simd-r-drive-entry-handle/arrow"]

[dependencies]
async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
crc32fast.workspace = true
dashmap.workspace = true
indoc.workspace = true
memmap2.workspace = true
rayon = { workspace = true, optional = true }
simd-r-drive-entry-handle.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
xxhash-rust = { workspace = true, features = ["xxh3", "const_xxh3"] }

[dev-dependencies]
bitcode.workspace = true
bytemuck.workspace = true
criterion.workspace = true
futures.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serial_test.workspace = true
tempfile.workspace = true
thousands.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }

[[bench]]
name = "storage_benchmark"
harness = false

[[bench]]
name = "contention_benchmark"
harness = false
