[package]
name = "simd-r-drive-extensions"
description = "Storage extensions for SIMD R Drive."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true  # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
categories.workspace = true # Inherit from workspace
keywords.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
simd-r-drive = { workspace = true }
walkdir = "2"

[dev-dependencies]
doc-comment = "0.3.3"
tempfile = "3.19.0"
