[package]
name = "simd-r-drive-extensions"
description = "Storage extensions for SIMD R Drive."
authors.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
version.workspace = true  # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
categories.workspace = true # Inherit from workspace
keywords.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
simd-r-drive = { workspace = true }
walkdir = { workspace = true}

[dev-dependencies]
doc-comment = { workspace = true }
tempfile = { workspace = true }
