[package]
name = "simd-r-drive-extensions"
description = "Storage extensions for SIMD R Drive."
authors.workspace = true
edition.workspace = true
version.workspace = true 
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
simd-r-drive = { workspace = true }
walkdir = { workspace = true}

[dev-dependencies]
doc-comment = { workspace = true }
tempfile = { workspace = true }
