[package]
name = "simd-r-drive-entry-handle"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
crc32fast = { workspace = true }
memmap2 = { workspace = true }

[features]
expose-internal-api = []
