[package]
name = "simd-r-drive-entry-handle"
description = "Standalone mmap-friendly entry handles for SIMD R Drive"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
arrow = { version = "56.1.0", optional = true }
crc32fast = { workspace = true }
memmap2 = { workspace = true }

[features]
expose-internal-api = []
arrow = ["dep:arrow"]
