[package]
name = "simd-r-drive-extensions"
version = "0.1.0"
edition = "2021"
categories = ["database-implementations", "data-structures", "filesystem"]
keywords = ["storage-engine", "binary-storage", "append-only", "simd", "mmap"]
publish = false

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
simd-r-drive = { path = "../" }

[dev-dependencies]
doc-comment = "0.3.3"
tempfile = "3.19.0"
