[package]
name = "simd-r-drive-py"
version = "0.4.1-alpha.11"
edition = "2021"
description = "SIMD-optimized append-only schema-less storage engine. Key-based binary storage in a single-file storage container."
repository = "https://github.com/jzombie/rust-simd-r-drive"
license = "Apache-2.0"
categories = ["database-implementations", "data-structures", "filesystem"]
keywords = ["storage-engine", "binary-storage", "append-only", "simd", "mmap"]
# For PyPi
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Database :: Database Engines/Servers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",  # Only CPython
    "Programming Language :: Python",  # Python support
    "Programming Language :: Python :: 3.9",  # Supporting Python 3.9+
    "Programming Language :: Python :: 3.10", # Supporting Python 3.10
    "Programming Language :: Python :: 3.11", # Supporting Python 3.11
    "Programming Language :: Python :: 3.12", # Supporting Python 3.12
    "Programming Language :: Python :: 3.13", # Supporting Python 3.13
    "Operating System :: POSIX :: Linux",  # Linux support
    "Operating System :: MacOS",  # macOS support
]
publish = false # Python bindings only — do not publish to crates.io

[lib]
name = "simd_r_drive"
crate-type = ["cdylib"]

[dependencies]
memmap2 = "0.9.5"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
simd-r-drive = { path = "../..", features = ["expose-internal-api"] }
