[package]
# Refer to `[project]` section in `pyproject.toml` for build artifact details
name = "simd-r-drive-py"
edition = "2021"
publish = false # Python bindings only — do not publish to crates.io

[lib]
name = "simd_r_drive"
crate-type = ["cdylib"]

[dependencies]
memmap2 = "0.9.5"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
simd-r-drive = { path = "../..", features = ["expose-internal-api"] }

[profile.release]
debug = true        # TODO: Don't include
