[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Database :: Database Engines/Servers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",  # Only CPython
    "Programming Language :: Python",  # Python support
    "Programming Language :: Python :: 3.9",  # Supporting Python 3.9+
    "Programming Language :: Python :: 3.10", # Supporting Python 3.10
    "Programming Language :: Python :: 3.11", # Supporting Python 3.11
    "Programming Language :: Python :: 3.12", # Supporting Python 3.12
    "Programming Language :: Python :: 3.13", # Supporting Python 3.13
    "Operating System :: POSIX :: Linux",  # Linux support
    "Operating System :: MacOS",  # macOS support
]
