[package]
name = "simd-r-drive-muxio-server"
authors.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
categories.workspace = true # Inherit from workspace
keywords.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
simd-r-drive = { workspace = true }
muxio-tokio-rpc-server = "0.4.0-alpha"
muxio-rpc-service = "0.4.0-alpha"
tokio = "1.45.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
simd-r-drive-muxio-service-definition = { workspace = true }
