[package]
name = "simd-r-drive-muxio-service-definition"
description = "Experimental Muxio service definitions for SIMD R Drive"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
bitcode = { workspace = true }
muxio-rpc-service = { workspace = true }

