[package]
name = "simd-r-drive-ws-client"
description = "Experimental WebSocket client for SIMD R Drive"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
simd-r-drive = { workspace = true }
simd-r-drive-muxio-service-definition = { workspace = true }
muxio-tokio-rpc-client = { workspace = true }
muxio-rpc-service = { workspace = true }
muxio-rpc-service-caller = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
