[package]
name = "simd-r-drive-ws-server"
description = "Experimental WebSocket server for SIMD R Drive"
authors.workspace = true # Inherit from workspace
version.workspace = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
repository.workspace = true # Inherit from workspace
license.workspace = true # Inherit from workspace
categories.workspace = true # Inherit from workspace
keywords.workspace = true # Inherit from workspace
publish.workspace = true # Inherit from workspace

[dependencies]
simd-r-drive = { workspace = true }
simd-r-drive-muxio-service-definition = { workspace = true }
muxio-tokio-rpc-server = "0.9.0-alpha"
muxio-rpc-service = "0.9.0-alpha"
tokio = "1.45.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
clap = { version = "4.5.40", features = ["derive"] }
indoc = "2.0.6"
