[package]
name = "simd-r-drive-ws-server"
description = "Experimental WebSocket server for SIMD R Drive"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
simd-r-drive = { workspace = true }
simd-r-drive-muxio-service-definition = { workspace = true }
muxio-tokio-rpc-server = { workspace = true }
muxio-rpc-service = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
indoc = { workspace = true }
