[package]
# Refer to `[project]` section in `pyproject.toml` for build artifact details
name = "simd-r-drive-ws-client-py"
edition.version = true # Inherit from workspace
edition.workspace = true # Inherit from workspace
publish = false # Python bindings only — do not publish to crates.io

[lib]
name = "simd_r_drive_ws_client"
crate-type = ["cdylib"]
doc = false

[dependencies]
memmap2 = "0.9.5"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] } 
simd-r-drive = { workspace = true }
simd-r-drive-ws-client = { workspace = true }
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
